# domain/models/post.go
@@ -1,0 +1,13 @@
+package models
+
+import "time"
+
+type Post struct {
+	ID        int32
+	Body      string
+	CreatedAt time.Time
+	UpdatedAt time.Time
+	UserID    int32
+	LikeCount int32
+	Comments  []Comment
+}
