# openapigen/gen.go
@@ -1,7 +1,7 @@
-// Package server provides primitives to interact with the openapi HTTP API.
+// Package openapigen provides primitives to interact with the openapi HTTP API.
 //
 // Code generated by github.com/oapi-codegen/oapi-codegen/v2 version v2.4.1 DO NOT EDIT.
-package server
+package openapigen
 
 import (
 	"fmt"
@@ -12,10 +12,31 @@ import (
 	openapi_types "github.com/oapi-codegen/runtime/types"
 )
 
+// Comment defines model for Comment.
+type Comment struct {
+	Body      string             `json:"body"`
+	CreatedAt openapi_types.Date `json:"createdAt"`
+	Id        int32              `json:"id"`
+	PostId    string             `json:"postId"`
+	UpdatedAt openapi_types.Date `json:"updatedAt"`
+	UserId    string             `json:"userId"`
+}
+
 // JWTResponse defines model for JWTResponse.
 type JWTResponse struct {
 	// AccessToken JWT access token
 	AccessToken string `json:"accessToken"`
+}
+
+// Post defines model for Post.
+type Post struct {
+	Body      string             `json:"body"`
+	Comments  []Comment          `json:"comments"`
+	CreatedAt openapi_types.Date `json:"createdAt"`
+	Id        int32              `json:"id"`
+	LikeCount int32              `json:"likeCount"`
+	UpdatedAt openapi_types.Date `json:"updatedAt"`
+	UserId    string             `json:"userId"`
 }
 
 // UserCreateRequest defines model for UserCreateRequest.
@@ -72,8 +93,23 @@ type LoginJSONBody struct {
 	Password *string              `json:"password,omitempty"`
 }
 
+// PostsParams defines parameters for Posts.
+type PostsParams struct {
+	// UserId ID of the user
+	UserId *int32 `form:"userId,omitempty" json:"userId,omitempty"`
+}
+
+// CreatePostJSONBody defines parameters for CreatePost.
+type CreatePostJSONBody struct {
+	// Body Текст поста
+	Body string `json:"body"`
+}
+
 // LoginJSONRequestBody defines body for Login for application/json ContentType.
 type LoginJSONRequestBody LoginJSONBody
+
+// CreatePostJSONRequestBody defines body for CreatePost for application/json ContentType.
+type CreatePostJSONRequestBody CreatePostJSONBody
 
 // CreateUserJSONRequestBody defines body for CreateUser for application/json ContentType.
 type CreateUserJSONRequestBody = UserCreateRequest
@@ -89,6 +125,15 @@ type ServerInterface interface {
 	// Logout user
 	// (POST /logout)
 	Logout(ctx echo.Context) error
+	// Получение информации о постах
+	// (GET /posts)
+	Posts(ctx echo.Context, params PostsParams) error
+	// Создание поста
+	// (POST /posts)
+	CreatePost(ctx echo.Context) error
+	// Get post by ID
+	// (GET /posts/{id})
+	PostById(ctx echo.Context, id int32) error
 	// Create a new user
 	// (POST /register)
 	CreateUser(ctx echo.Context) error
@@ -126,6 +171,49 @@ func (w *ServerInterfaceWrapper) Logout(ctx echo.Context) error {
 
 	// Invoke the callback with all the unmarshaled arguments
 	err = w.Handler.Logout(ctx)
+	return err
+}
+
+// Posts converts echo context to params.
+func (w *ServerInterfaceWrapper) Posts(ctx echo.Context) error {
+	var err error
+
+	// Parameter object where we will unmarshal all parameters from the context
+	var params PostsParams
+	// ------------- Optional query parameter "userId" -------------
+
+	err = runtime.BindQueryParameter("form", true, false, "userId", ctx.QueryParams(), &params.UserId)
+	if err != nil {
+		return echo.NewHTTPError(http.StatusBadRequest, fmt.Sprintf("Invalid format for parameter userId: %s", err))
+	}
+
+	// Invoke the callback with all the unmarshaled arguments
+	err = w.Handler.Posts(ctx, params)
+	return err
+}
+
+// CreatePost converts echo context to params.
+func (w *ServerInterfaceWrapper) CreatePost(ctx echo.Context) error {
+	var err error
+
+	// Invoke the callback with all the unmarshaled arguments
+	err = w.Handler.CreatePost(ctx)
+	return err
+}
+
+// PostById converts echo context to params.
+func (w *ServerInterfaceWrapper) PostById(ctx echo.Context) error {
+	var err error
+	// ------------- Path parameter "id" -------------
+	var id int32
+
+	err = runtime.BindStyledParameterWithOptions("simple", "id", ctx.Param("id"), &id, runtime.BindStyledParameterOptions{ParamLocation: runtime.ParamLocationPath, Explode: false, Required: true})
+	if err != nil {
+		return echo.NewHTTPError(http.StatusBadRequest, fmt.Sprintf("Invalid format for parameter id: %s", err))
+	}
+
+	// Invoke the callback with all the unmarshaled arguments
+	err = w.Handler.PostById(ctx, id)
 	return err
 }
 
@@ -211,6 +299,9 @@ func RegisterHandlersWithBaseURL(router EchoRouter, si ServerInterface, baseURL 
 
 	router.POST(baseURL+"/login", wrapper.Login)
 	router.POST(baseURL+"/logout", wrapper.Logout)
+	router.GET(baseURL+"/posts", wrapper.Posts)
+	router.POST(baseURL+"/posts", wrapper.CreatePost)
+	router.GET(baseURL+"/posts/:id", wrapper.PostById)
 	router.POST(baseURL+"/register", wrapper.CreateUser)
 	router.GET(baseURL+"/users", wrapper.ListUsers)
 	router.GET(baseURL+"/users/current", wrapper.GetCurrentUser)
